--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <body style="background-color:#dcdce0;">
         <span id="legend">
             <div id="form"></div>
+            <div id="time">
+                <p>Time:12:00PM</p>
+            </div>
             <div id="sequence"></div>
             <div id="dropdown"></div>
             
