--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body style="background-color:#dcdce0;">
-        <span id="legend">
+        <span id="controls">
             <div id="form"></div>
             <div id="time">
                 <p>Time:12:00PM</p>
