Remove unused code

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div class="content">
             <div class="center title">
                 <h1>Congestion Pricing in New York City</h1>
+                <h4 class="author">By: David Kwong</h4>
+            </div>
             </div>
             <div class="row">
                 <div class="left">
@@ -42,7 +44,7 @@
                     <br>
                     <p>A golbal traffic survey by INRIX found that New York City had the worst traffic on the continent in 2021.</p>
                     <br>
-                    <p>Before COVID the MTA estimated average traffic speeds within the propsed congestion zone were just 7MPH.</p>
+                    <p>Before COVID the MTA estimated average traffic speeds within the proposed congestion zone were just 7MPH.</p>
                     <br>
                     <p>This traffic results in millions of hours lost for New Yorkers and over $8 Billion in cost for the city, which doesn't include damages from traffic accidents or the increased air pollution.</p>
                     <br>
