--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="center title">
                 <h1>Congestion Pricing in New York City</h1>
                 <h4 class="author">By: David Kwong</h4>
+                <h5>Fall 2022</h5>
             </div>
             </div>
             <div class="row">
@@ -30,7 +31,8 @@
                     <br>
                     <p>The plan is estimated to generate 1 Billion for the MTA. 80% will go for subways and buses, 10% to the LIRR, and 10% to the Metro North.</p>
                     <br>
-                    <p>Congestion pricing in New York is currently planned to be implemented mid 2023</p>
+                    <p>The MTA is considering several different pricing scenarios and held public hearings about pricing from September to November 2022. </p>
+                    <p>Congestion pricing in New York is currently planned to be implemented mid 2023.</p>
 
                 </div>
                 <div class="right">
@@ -74,7 +76,21 @@
             <div class="row no-margin">
                 <div id="map"></div>
             </div>
-            
+            <br>
+            <div class="row no-margin">
+                <div class="fit">
+                    <h3>Data</h3>
+                    <p><a href='https://data.cityofnewyork.us/Transportation/Traffic-Volume-Counts/btm5-ppia'  target="_blank">Traffic counts</a>
+                    <br>
+                    <a href='http://web.mta.info/developers/developer-data-terms.html#data'  target="_blank">MTA Data</a>
+                    <br>
+                    <a href='https://www.silive.com/news/2022/08/nyc-congestion-pricing-here-are-the-rates-under-7-tolling-scenarios.html'  target="_blank">Scenarios</a>
+                    <br>
+                    <a href='https://new.mta.info/project/CBDTP'  target="_blank">Congestion Pricing Facts</a></p>
+
+                    
+                </div>
+                <div class="right">
         </div>
         <script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
         <script type="text/javascript" src="lib/d3.min.js"></script>
